--- a/pages/admin/admin.wxml
+++ b/pages/admin/admin.wxml
@@ -17,38 +17,38 @@
   </view>
   <view class="flex-wrp admin_list" style="flex-direction:row;margin-bottom:15px">
     <view class="flex-item admin_images" bindtap='toscience'>
-      <image src='../images/nav_@2x/待付款@2x.png'></image>
+      <image src='http://p95v2ft9v.bkt.clouddn.com/%E5%BE%85%E4%BB%98%E6%AC%BE@2x.png'></image>
       <view>待付款</view>
     </view>
     <view class="flex-item admin_images" bindtap='toQuestions'>
-      <image src='../images/nav_@2x/待发货@2x.png'></image>
+      <image src='http://p95v2ft9v.bkt.clouddn.com/%E5%BE%85%E5%8F%91%E8%B4%A7@2x.png'></image>
       <view>待发货</view>
     </view>
     <view class="flex-item admin_images" bindtap='toHeatTheory'>
-      <image src='../images/nav_@2x/待评价@2x.png'></image>
+      <image src='http://p95v2ft9v.bkt.clouddn.com/%E5%BE%85%E8%AF%84%E4%BB%B7@2x.png'></image>
       <view>待评价</view>
     </view>
     <view class="flex-item admin_images">
-      <image src='../images/nav_@2x/售后@2x.png'></image>
+      <image src='http://p95v2ft9v.bkt.clouddn.com/%E5%94%AE%E5%90%8E@2x.png'></image>
       <view>售后</view>
     </view>
   </view>
 
   <view class="flex-wrp admin_list" style="flex-direction:row;">
     <view class="flex-item admin_images" bindtap='toscience'>
-      <image src='../images/nav_@2x/积分@2x.png'></image>
+      <image src='http://p95v2ft9v.bkt.clouddn.com/%E7%A7%AF%E5%88%86@2x.png'></image>
       <view>我的积分</view>
     </view>
     <view class="flex-item admin_images" bindtap='toQuestions'>
-      <image src='../images/nav_@2x/优惠券@2x.png'></image>
+      <image src='http://p95v2ft9v.bkt.clouddn.com/%E4%BC%98%E6%83%A0%E5%88%B8@2x.png'></image>
       <view>我的优惠券</view>
     </view>
     <view class="flex-item admin_images" bindtap='toHeatTheory'>
-      <image src='../images/nav_@2x/地址管理@2x.png'></image>
+      <image src='http://p95v2ft9v.bkt.clouddn.com/%E5%9C%B0%E5%9D%80%E7%AE%A1%E7%90%86@2x.png'></image>
       <view>地址管理</view>
     </view>
     <view class="flex-item admin_images">
-      <image src='../images/nav_@2x/联系客服@2x.png'></image>
+      <image src='http://p95v2ft9v.bkt.clouddn.com/%E8%81%94%E7%B3%BB%E5%AE%A2%E6%9C%8D@2x.png'></image>
       <view>联系客服</view>
     </view>
   </view>
