--- a/pages/discover/discover.wxss
+++ b/pages/discover/discover.wxss
@@ -73,10 +73,9 @@
 }
 
 .page_label {
-  height:45px;
-  line-height:45px;
-  color:#808080;
-  text-align:center;
+  text-align: center;
+  margin: 20px 0 10px 0;
+  font-size: 16px
 }
 .page_personal_img_t{
   margin: 0 15px;
