--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,4 @@
- <view class="page discover">
+<view class="page discover">
   <swiper class='swiper-image' indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
     <block wx:for="{{imageUrl}}">
       <swiper-item>
@@ -19,8 +19,9 @@
       <view class='page_title'>- 本周话题 -</view>
       <view class='page_label'>宝宝衣服能用洗衣液/洗衣粉/肥皂吗？</view>
       <view>
+        <image style='width:35px;border-radius:50%' mode='widthFix' src='http://p95v2ft9v.bkt.clouddn.com/toux02.jpeg'></image>
         <image style='width:28px' mode='widthFix' src='http://p95v2ft9v.bkt.clouddn.com/login@2x.png'></image>
-        <text page_title>666人参与讨论</text> </view>
+        <text page_title>6人参与讨论</text> </view>
     </view>
   </view>
 
@@ -66,5 +67,5 @@
   </view>
 </view>
 <view class='discover_fixed' bindtap='toQuestion'>
-  <image src='http://p95v2ft9v.bkt.clouddn.com/%E6%8F%90%E9%97%AE_1.png' style='width:40px;' mode='widthFix'></image>
-</view> 
+  <image src='http://p95v2ft9v.bkt.clouddn.com/%E9%97%AE%E7%AD%94%E6%89%8B%E6%9C%BA%E7%89%88%E6%8F%90%E9%97%AEICON-01.png' mode='widthFix'></image>
+</view>
