--- a/pages/discover/discover.wxml
+++ b/pages/discover/discover.wxml
@@ -9,63 +9,105 @@
     </swiper>
   </view>
   <view class='page_personal'>
-    <view class='page_label'>私人定制</view>
-    <view class='page_personal_img_t' bindtap='toDetail'>
-      <image src='http://p95v2ft9v.bkt.clouddn.com/mall/banner2@2x.png' mode="widthFix"></image>
+    <view class='page_label'>
+      <text></text>私人定制
+      <text></text>
     </view>
+    <view class='page_personal_img_t' bindtap='toDetail'>
+      <image class="page_shadow" src='http://p95v2ft9v.bkt.clouddn.com/mall/banner2@2x.png' mode="widthFix"></image>
+    </view>
+
     <view class="flex-wrp page_personal_b">
-      <view class="flex-item page_personal_b_l" bindtap='toDetail'>
+      <view class="flex-item page_personal_b_l page_bgr page_shadow" bindtap='toDetail'>
         <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-11@2x.png' mode='widthFix'></image>
+        <view class='page_price'>
+          <view>蓝月亮私人定制套餐</view>
+          <text>￥29.99</text>
+        </view>
       </view>
-      <view class="flex-item page_personal_b_r" bindtap='toDetail'>
+      <view class="flex-item page_personal_b_r page_bgr page_shadow" bindtap='toDetail'>
         <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-12@2x.png' mode='widthFix'></image>
+        <view class='page_price'>
+          <view>蓝月亮私人定制套餐</view>
+          <text>￥29.99</text>
+        </view>
       </view>
     </view>
   </view>
 
   <view class="flex-wrp page_personal_b">
     <view class="flex-item page_personal_b_l" bindtap='toList'>
-      <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-13@2x.png' mode='widthFix'></image>
+      <image class="page_shadow" src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-13@2x.png' mode='widthFix'></image>
     </view>
     <view class="flex-item page_personal_b_l" bindtap='toList'>
-      <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-14@2x.png' mode='widthFix'></image>
+      <image class="page_shadow" src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-14@2x.png' mode='widthFix'></image>
     </view>
     <view class="flex-item page_personal_b_r" bindtap='toList'>
-      <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-15@2x.png' mode='widthFix'></image>
+      <image class="page_shadow" src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-15@2x.png' mode='widthFix'></image>
     </view>
   </view>
 
   <view class='page_personal'>
-    <view class='page_label'>新品首发</view>
-    <view class='page_personal_img_t'>
-      <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E6%96%B0%E5%93%81%E9%A6%96%E5%8F%91@2x.png' mode="widthFix"></image>
+    <view class='page_label'>
+      <text></text>新品首发
+      <text></text>
+    </view>
+    <view class='page_personal_img_t ' bindtap='toDetail'>
+      <image class="page_shadow" src='http://p95v2ft9v.bkt.clouddn.com/mall/%E6%96%B0%E5%93%81%E9%A6%96%E5%8F%91@2x.png' mode="widthFix"></image>
     </view>
   </view>
 
-   <view class='page_personal'>
-    <view class='page_label'>人气推荐</view>
+  <view class='page_personal'>
+    <view class='page_label'>
+      <text></text>人气推荐
+      <text></text>
+    </view>
     <view class="flex-wrp page_personal_b">
-      <view class="flex-item page_personal_b_l" bindtap='toDetail'>
+      <view class="flex-item page_personal_b_l page_bgr page_shadow" bindtap='toDetail'>
         <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-11@2x.png' mode='widthFix'></image>
+        <view class='page_price'>
+          <view>蓝月亮人气推荐商品</view>
+          <text>￥29.99</text>
+        </view>
       </view>
-      <view class="flex-item page_personal_b_r" bindtap='toDetail'>
+      <view class="flex-item page_personal_b_r page_bgr page_shadow" bindtap='toDetail'>
         <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-12@2x.png' mode='widthFix'></image>
+        <view class='page_price'>
+          <view>蓝月亮人气推荐商品</view>
+          <text>￥29.99</text>
+        </view>
       </view>
     </view>
     <view class="flex-wrp page_personal_b">
-      <view class="flex-item page_personal_b_l" bindtap='toDetail'>
+      <view class="flex-item page_personal_b_l page_bgr page_shadow" bindtap='toDetail'>
         <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-21@2x.png' mode='widthFix'></image>
+        <view class='page_price'>
+          <view>蓝月亮人气推荐商品</view>
+          <text>￥29.99</text>
+        </view>
       </view>
-      <view class="flex-item page_personal_b_r" bindtap='toDetail'>
+      <view class="flex-item page_personal_b_r page_bgr page_shadow" bindtap='toDetail'>
         <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-22@2x.png' mode='widthFix'></image>
+        <view class='page_price'>
+          <view>蓝月亮人气推荐商品</view>
+          <text>￥29.99</text>
+        </view>
       </view>
     </view>
     <view class="flex-wrp page_personal_b">
-      <view class="flex-item page_personal_b_l" bindtap='toDetail'>
+      <view class="flex-item page_personal_b_l page_bgr page_shadow" bindtap='toDetail'>
         <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-31@2x.png' mode='widthFix'></image>
+        <view class='page_price'>
+          <view>蓝月亮人气推荐商品</view>
+          <text>￥29.99</text>
+        </view>
       </view>
-      <view class="flex-item page_personal_b_r" bindtap='toDetail'>
+      <view class="flex-item page_personal_b_r page_bgr page_shadow" bindtap='toDetail'>
         <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E7%BB%84-32@2x.png' mode='widthFix'></image>
+        <view class='page_price'>
+          <view>蓝月亮人气推荐商品</view>
+          <text>￥29.99</text>
+        </view>
       </view>
     </view>
   </view>
