--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -41,16 +41,15 @@
   padding: 1px;
   background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #b2b2b2;  
+  box-shadow: 1px 1px 10px #b2b2b2;  
 }
 
 .discover-content-big{
   width: 100%;
-  /* height: 180px; */
   padding: 1px;
   background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #b2b2b2; 
+  box-shadow: 1px 1px 10px #b2b2b2; 
 }
 
 .discover-content-left{
@@ -66,7 +65,8 @@
   border: 1px solid #e2e2e2;  
   border-radius: 20px;  
   margin: 15px 15px 0 15px;
-  background-color: #ffffff
+  background-color: #ffffff;
+  box-shadow: 1px 1px 10px #d2d2d2
 }  
 .search_arr input{  
   margin-left: 60rpx;  
@@ -286,7 +286,7 @@
   background-color:#FAFAFA;
   height:150px;
   border-radius:10px;
-  box-shadow:2px 2px 5px #c2c2c2
+  box-shadow:1px 1px 10px #b2b2b2
 }
 
 .page_topic_content{
@@ -319,4 +319,13 @@
   background-color:#fff;
   border-radius:50%;
   width:40px;
+}
+
+.discover-help text{
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background-color: #d2d2d2;
+  transform: rotate(50deg);
+  margin: 0 5px
 }
